@@ -3,6 +3,8 @@ Changes since 1.5.1
 * Fix for bug#48676 in RetrievalMethod handler (SC)
 * Fix for bug#45867, support for >1 CRL per KeyInfo (SC)
 * Fix for bug#49148, buffer initialization issue (SC)
+* Fix for bug#49255, vector index bug (SC)
+* Fix for bug#49256, stylesheet append bug (SC)
 * Expose algorithm URI on Signature and Reference objects (SC)
 * White/blacklisting of otherwise registered algorithms (SC)
 
